--- a/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5.ioc
@@ -6,6 +6,9 @@ ADC.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC.SamplingTimeCommon1=ADC_SAMPLETIME_160CYCLES_5
 ADC.SamplingTimeCommon2=ADC_SAMPLETIME_160CYCLES_5
 ADC.SelectedChannel=ADC_CHANNEL_TEMPSENSOR|ADC_CHANNEL_VREFINT
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 Dma.Request0=USART1_TX
 Dma.RequestsNb=1
 Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
@@ -28,24 +31,25 @@ Dma.USART1_TX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
-LORAWAN.ACTIVE_REGION=LORAMAC_REGION_US915
+LORAWAN.ACTIVE_REGION=LORAMAC_REGION_EU868
 LORAWAN.Activate_DEBUG_LINE=true
 LORAWAN.Activate_RADIO_BOARD_INTERFACE=Bsp
 LORAWAN.CONTEXT_MANAGEMENT_ENABLED=true
-LORAWAN.HYBRID_ENABLED=false
-LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,HYBRID_ENABLED,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION
+LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION,LORAWAN_JOIN_EUI,LORAWAN_JOIN_EUI_HEX
 LORAWAN.LORAMAC_SPECIFICATION_VERSION=0x01000400
-LORAWAN.LORAWAN_APP_KEY=9B,0C,9A,82,E6,74,A5,11,B9,E5,26,A9,11,87,EB,84
+LORAWAN.LORAWAN_APP_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_DEFAULT_CLASS=CLASS_A
-LORAWAN.LORAWAN_DEVICE_EUI=2C, F7, F1, 20, 24, 90, 0E, A5
-LORAWAN.LORAWAN_DEVICE_EUI_HEX=0x2C, 0xF7, 0xF1, 0x20, 0x24, 0x90, 0x0E, 0xA5
-LORAWAN.LORAWAN_NWK_KEY=8B,0C,9A,82,E6,74,A5,11,B9,E5,26,A9,11,87,EB,84
+LORAWAN.LORAWAN_DEVICE_EUI=2C, F7, F1, 20, 24, 90, 03, CD
+LORAWAN.LORAWAN_DEVICE_EUI_HEX=0x2C, 0xF7, 0xF1, 0x20, 0x24, 0x90, 0x03, 0xCD
+LORAWAN.LORAWAN_JOIN_EUI=80, 00, 00, 00, 00, 00, 00, 06
+LORAWAN.LORAWAN_JOIN_EUI_HEX=0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x06
+LORAWAN.LORAWAN_NWK_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_PUBLIC_NETWORK=true
 LORAWAN.LOW_POWER_DISABLE=false
 LORAWAN.REGION_CN470=false
-LORAWAN.REGION_US915=true
+LORAWAN.REGION_US915=false
 LORAWAN.STATIC_DEVICE_ADDRESS=false
-LORAWAN.STATIC_DEVICE_EUI=false
+LORAWAN.STATIC_DEVICE_EUI=true
 LORAWAN.SUBGHZ_APPLICATION=LORA_END_NODE
 LoRaWAN.BSP.number=7
 LoRaWAN0.BSP.STBoard=false
@@ -126,6 +130,7 @@ Mcu.IP10=SYS
 Mcu.IP11=TIMER
 Mcu.IP12=TINY_LPM
 Mcu.IP13=USART1
+Mcu.IP14=USART2
 Mcu.IP2=DMA
 Mcu.IP3=LORAWAN
 Mcu.IP4=MISC
@@ -134,29 +139,31 @@ Mcu.IP6=RCC
 Mcu.IP7=RTC
 Mcu.IP8=SEQUENCER
 Mcu.IP9=SUBGHZ
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32WLE5JCIx
 Mcu.Package=UFBGA73
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PB3
 Mcu.Pin10=OSC_IN
-Mcu.Pin11=PB10
-Mcu.Pin12=PA4
-Mcu.Pin13=PA5
-Mcu.Pin14=VP_ADC_TempSens_Input
-Mcu.Pin15=VP_ADC_Vref_Input
-Mcu.Pin16=VP_ADV_TRACE_VS_ADV_TRACE
-Mcu.Pin17=VP_LORAWAN_VS_LoRaWAN
-Mcu.Pin18=VP_MISC_VS_MISC
-Mcu.Pin19=VP_RTC_VS_RTC_Activate
+Mcu.Pin11=PA3
+Mcu.Pin12=PA2
+Mcu.Pin13=PB10
+Mcu.Pin14=PA4
+Mcu.Pin15=PA5
+Mcu.Pin16=VP_ADC_TempSens_Input
+Mcu.Pin17=VP_ADC_Vref_Input
+Mcu.Pin18=VP_ADV_TRACE_VS_ADV_TRACE
+Mcu.Pin19=VP_LORAWAN_VS_LoRaWAN
 Mcu.Pin2=PB4
-Mcu.Pin20=VP_RTC_VS_RTC_Calendar
-Mcu.Pin21=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin22=VP_SEQUENCER_VS_SEQUENCER
-Mcu.Pin23=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin24=VP_SYS_VS_None
-Mcu.Pin25=VP_TIMER_VS_TIMER
-Mcu.Pin26=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin20=VP_MISC_VS_MISC
+Mcu.Pin21=VP_RTC_VS_RTC_Activate
+Mcu.Pin22=VP_RTC_VS_RTC_Calendar
+Mcu.Pin23=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin24=VP_SEQUENCER_VS_SEQUENCER
+Mcu.Pin25=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin26=VP_SYS_VS_None
+Mcu.Pin27=VP_TIMER_VS_TIMER
+Mcu.Pin28=VP_TINY_LPM_VS_TINY_LPM
 Mcu.Pin3=PB7
 Mcu.Pin4=PC15-OSC32_OUT
 Mcu.Pin5=PB5
@@ -164,7 +171,7 @@ Mcu.Pin6=PA0
 Mcu.Pin7=PB13
 Mcu.Pin8=PB6
 Mcu.Pin9=PB0-VDD_TCXO
-Mcu.PinsNb=27
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1)
 Mcu.UserName=STM32WLE5JCIx
@@ -187,6 +194,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:true\:false\:false\:false
 NVIC.TAMP_STAMP_LSECSS_SSRU_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=None
 NVIC.USART1_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OSC_IN.Mode=HSE-TCXO
 OSC_IN.Signal=RCC_OSC_IN
@@ -195,6 +203,10 @@ PA0.GPIO_Label=DBG1
 PA0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA0.Locked=true
 PA0.Signal=GPIO_Output
+PA2.Mode=IrDA
+PA2.Signal=USART2_TX
+PA3.Mode=IrDA
+PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Speed,GPIO_Label
 PA4.GPIO_Label=RF_CTRL1
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -251,7 +263,7 @@ PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PCC.SUBGHZ.FrequencyBand=High
 PCC.SUBGHZ.Modulation=FSK
 PCC.SUBGHZ.OptionalSettings=false
-PCC.SUBGHZ.Output.Power=14
+PCC.SUBGHZ.Output.Power=10
 PCC.SUBGHZ.PowerAmplifier=Low Power
 PCC.SUBGHZ.RxBoosted=false
 PCC.SUBGHZ.SMPS=Off
@@ -284,7 +296,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_DMA_Init-DMA-true-HAL-true,6-MX_USART1_UART_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_UART_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,9-MX_USART2_IRDA_Init-USART2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -335,6 +347,11 @@ SUBGHZ.IPParameters=BaudratePrescaler
 USART1.FIFOMode=FIFOMODE_ENABLE
 USART1.IPParameters=VirtualMode-Asynchronous,FIFOMode
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.BaudRate=57600
+USART2.IPParameters=VirtualMode-IrDA,BaudRate,Prescaler,PowerMode
+USART2.PowerMode=IRDA_POWERMODE_NORMAL
+USART2.Prescaler=1
+USART2.VirtualMode-IrDA=VM_IRDA
 VP_ADC_TempSens_Input.Mode=IN-TempSens
 VP_ADC_TempSens_Input.Signal=ADC_TempSens_Input
 VP_ADC_Vref_Input.Mode=IN-Vrefint
