Working version of flash

--- a/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5.ioc
@@ -41,8 +41,8 @@ LORAWAN.LORAWAN_APP_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_DEFAULT_CLASS=CLASS_A
 LORAWAN.LORAWAN_DEVICE_EUI=2C, F7, F1, 20, 24, 90, 03, CD
 LORAWAN.LORAWAN_DEVICE_EUI_HEX=0x2C, 0xF7, 0xF1, 0x20, 0x24, 0x90, 0x03, 0xCD
-LORAWAN.LORAWAN_JOIN_EUI=80, 00, 00, 00, 00, 00, 00, 06
-LORAWAN.LORAWAN_JOIN_EUI_HEX=0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x06
+LORAWAN.LORAWAN_JOIN_EUI=80, 00, 00, 00, 00, 00, 00, 07
+LORAWAN.LORAWAN_JOIN_EUI_HEX=0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x07
 LORAWAN.LORAWAN_NWK_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_PUBLIC_NETWORK=true
 LORAWAN.LOW_POWER_DISABLE=false
@@ -296,7 +296,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_UART_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,9-MX_USART2_IRDA_Init-USART2-false-HAL-true,10-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_UART_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,9-MX_USART2_IRDA_Init-USART2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
