--- a/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5.ioc
@@ -35,10 +35,11 @@ LORAWAN.ACTIVE_REGION=LORAMAC_REGION_EU868
 LORAWAN.Activate_DEBUG_LINE=true
 LORAWAN.Activate_RADIO_BOARD_INTERFACE=Bsp
 LORAWAN.CONTEXT_MANAGEMENT_ENABLED=true
-LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION,LORAWAN_JOIN_EUI,LORAWAN_JOIN_EUI_HEX
+LORAWAN.IPParameters=SUBGHZ_APPLICATION,ACTIVE_REGION,LOW_POWER_DISABLE,Activate_DEBUG_LINE,Activate_RADIO_BOARD_INTERFACE,STATIC_DEVICE_EUI,LORAWAN_DEVICE_EUI,LORAWAN_DEVICE_EUI_HEX,LORAWAN_APP_KEY,LORAWAN_NWK_KEY,LORAWAN_DEFAULT_CLASS,STATIC_DEVICE_ADDRESS,LORAWAN_PUBLIC_NETWORK,REGION_CN470,REGION_US915,CONTEXT_MANAGEMENT_ENABLED,LORAMAC_SPECIFICATION_VERSION,LORAWAN_JOIN_EUI,LORAWAN_JOIN_EUI_HEX,VERBOSE_LEVEL,LORAWAN_DEFAULT_CONFIRMED_MSG_STATE
 LORAWAN.LORAMAC_SPECIFICATION_VERSION=0x01000400
 LORAWAN.LORAWAN_APP_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_DEFAULT_CLASS=CLASS_A
+LORAWAN.LORAWAN_DEFAULT_CONFIRMED_MSG_STATE=LORAMAC_HANDLER_CONFIRMED_MSG
 LORAWAN.LORAWAN_DEVICE_EUI=2C, F7, F1, 20, 24, 90, 03, CD
 LORAWAN.LORAWAN_DEVICE_EUI_HEX=0x2C, 0xF7, 0xF1, 0x20, 0x24, 0x90, 0x03, 0xCD
 LORAWAN.LORAWAN_JOIN_EUI=80, 00, 00, 00, 00, 00, 00, 07
@@ -51,6 +52,7 @@ LORAWAN.REGION_US915=false
 LORAWAN.STATIC_DEVICE_ADDRESS=false
 LORAWAN.STATIC_DEVICE_EUI=true
 LORAWAN.SUBGHZ_APPLICATION=LORA_END_NODE
+LORAWAN.VERBOSE_LEVEL=VLEVEL_H
 LoRaWAN.BSP.number=7
 LoRaWAN0.BSP.STBoard=false
 LoRaWAN0.BSP.api=Unknown
