--- a/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5.ioc
@@ -40,8 +40,8 @@ LORAWAN.LORAMAC_SPECIFICATION_VERSION=0x01000400
 LORAWAN.LORAWAN_APP_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
 LORAWAN.LORAWAN_DEFAULT_CLASS=CLASS_A
 LORAWAN.LORAWAN_DEFAULT_CONFIRMED_MSG_STATE=LORAMAC_HANDLER_CONFIRMED_MSG
-LORAWAN.LORAWAN_DEVICE_EUI=2C, F7, F1, 20, 24, 90, 03, CD
-LORAWAN.LORAWAN_DEVICE_EUI_HEX=0x2C, 0xF7, 0xF1, 0x20, 0x24, 0x90, 0x03, 0xCD
+LORAWAN.LORAWAN_DEVICE_EUI=2C, F7, F1, 20, 24, 90, 15, 0B
+LORAWAN.LORAWAN_DEVICE_EUI_HEX=0x2C, 0xF7, 0xF1, 0x20, 0x24, 0x90, 0x15, 0x0B
 LORAWAN.LORAWAN_JOIN_EUI=80, 00, 00, 00, 00, 00, 00, 07
 LORAWAN.LORAWAN_JOIN_EUI_HEX=0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x07
 LORAWAN.LORAWAN_NWK_KEY=2B,7E,15,16,28,AE,D2,A6,AB,F7,15,88,09,CF,4F,3C
@@ -53,7 +53,7 @@ LORAWAN.STATIC_DEVICE_ADDRESS=false
 LORAWAN.STATIC_DEVICE_EUI=true
 LORAWAN.SUBGHZ_APPLICATION=LORA_END_NODE
 LORAWAN.VERBOSE_LEVEL=VLEVEL_H
-LoRaWAN.BSP.number=7
+LoRaWAN.BSP.number=3
 LoRaWAN0.BSP.STBoard=false
 LoRaWAN0.BSP.api=Unknown
 LoRaWAN0.BSP.component=
@@ -78,52 +78,12 @@ LoRaWAN2.BSP.STBoard=false
 LoRaWAN2.BSP.api=Unknown
 LoRaWAN2.BSP.component=
 LoRaWAN2.BSP.condition=SEM_LORA_END_NODE  | SEM_LORA_USE_UART
-LoRaWAN2.BSP.instance=USART1
+LoRaWAN2.BSP.instance=USART2
 LoRaWAN2.BSP.ip=(LPU|US)ART
 LoRaWAN2.BSP.mode=Asynchronous
 LoRaWAN2.BSP.name=USART
 LoRaWAN2.BSP.semaphore=
-LoRaWAN2.BSP.solution=USART1
-LoRaWAN3.BSP.STBoard=false
-LoRaWAN3.BSP.api=Unknown
-LoRaWAN3.BSP.component=
-LoRaWAN3.BSP.condition=SEM_PROBE_LINE_FOR_LORA
-LoRaWAN3.BSP.instance=PA0
-LoRaWAN3.BSP.ip=GPIO
-LoRaWAN3.BSP.mode=Output
-LoRaWAN3.BSP.name=Debug Line 1
-LoRaWAN3.BSP.semaphore=
-LoRaWAN3.BSP.solution=PA0
-LoRaWAN4.BSP.STBoard=false
-LoRaWAN4.BSP.api=Unknown
-LoRaWAN4.BSP.component=
-LoRaWAN4.BSP.condition=SEM_PROBE_LINE_FOR_LORA
-LoRaWAN4.BSP.instance=PB10
-LoRaWAN4.BSP.ip=GPIO
-LoRaWAN4.BSP.mode=Output
-LoRaWAN4.BSP.name=Debug Line 2
-LoRaWAN4.BSP.semaphore=
-LoRaWAN4.BSP.solution=PB10
-LoRaWAN5.BSP.STBoard=false
-LoRaWAN5.BSP.api=Unknown
-LoRaWAN5.BSP.component=
-LoRaWAN5.BSP.condition=SEM_PROBE_LINE_FOR_LORA
-LoRaWAN5.BSP.instance=PB3
-LoRaWAN5.BSP.ip=GPIO
-LoRaWAN5.BSP.mode=Output
-LoRaWAN5.BSP.name=Debug Line 3
-LoRaWAN5.BSP.semaphore=
-LoRaWAN5.BSP.solution=PB3
-LoRaWAN6.BSP.STBoard=false
-LoRaWAN6.BSP.api=Unknown
-LoRaWAN6.BSP.component=
-LoRaWAN6.BSP.condition=SEM_PROBE_LINE_FOR_LORA
-LoRaWAN6.BSP.instance=PB4
-LoRaWAN6.BSP.ip=GPIO
-LoRaWAN6.BSP.mode=Output
-LoRaWAN6.BSP.name=Debug Line 4
-LoRaWAN6.BSP.semaphore=
-LoRaWAN6.BSP.solution=PB4
+LoRaWAN2.BSP.solution=USART2
 Mcu.CPN=STM32WLE5JCI6
 Mcu.Family=STM32WL
 Mcu.IP0=ADC
@@ -182,7 +142,6 @@ MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -200,14 +159,11 @@ NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OSC_IN.Mode=HSE-TCXO
 OSC_IN.Signal=RCC_OSC_IN
-PA0.GPIOParameters=GPIO_Speed,GPIO_Label
-PA0.GPIO_Label=DBG1
-PA0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA0.Locked=true
-PA0.Signal=GPIO_Output
-PA2.Mode=IrDA
+PA0.Signal=GPIO_Input
+PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.Mode=IrDA
+PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Speed,GPIO_Label
 PA4.GPIO_Label=RF_CTRL1
@@ -221,42 +177,33 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PB0-VDD_TCXO.Mode=HSE-TCXO
 PB0-VDD_TCXO.Signal=VDDTCXO
-PB10.GPIOParameters=GPIO_Speed,GPIO_Label
-PB10.GPIO_Label=DBG2
-PB10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB10.Locked=true
-PB10.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PB13.GPIO_Label=BUT1
-PB13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PB13.GPIO_PuPd=GPIO_PULLUP
+PB10.Signal=GPIO_Input
 PB13.Locked=true
-PB13.Signal=GPXTI13
-PB3.GPIOParameters=GPIO_Speed,GPIO_Label
-PB3.GPIO_Label=DBG3
-PB3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB13.Signal=GPIO_Input
 PB3.Locked=true
-PB3.Signal=GPIO_Output
-PB4.GPIOParameters=GPIO_Speed,GPIO_Label
+PB3.Signal=GPIO_Input
+PB4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PB4.GPIO_Label=DBG4
 PB4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB4.Locked=true
+PB4.PinState=GPIO_PIN_RESET
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PB5.GPIO_Label=LED2
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Locked=true
-PB5.PinState=GPIO_PIN_SET
+PB5.PinState=GPIO_PIN_RESET
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Speed,GPIO_Label
 PB6.GPIO_Label=USARTx_TX
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PB6.Mode=Asynchronous
+PB6.Mode=IrDA
 PB6.Signal=USART1_TX
 PB7.GPIOParameters=GPIO_Speed,GPIO_Label
 PB7.GPIO_Label=USARTx_RX
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PB7.Mode=Asynchronous
+PB7.Mode=IrDA
 PB7.Signal=USART1_RX
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
@@ -298,7 +245,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_UART_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,9-MX_USART2_IRDA_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_IRDA_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -342,18 +289,14 @@ RTC.AsynchPrediv=RTC_PREDIV_A
 RTC.BinMode=RTC_BINARY_ONLY
 RTC.BinaryAutoClr_A-Alarm\ A=RTC_ALARMSUBSECONDBIN_AUTOCLR_NO
 RTC.IPParameters=Alarm-Alarm A,BinMode,BinaryAutoClr_A-Alarm A,AsynchPrediv
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 SUBGHZ.BaudratePrescaler=SUBGHZSPI_BAUDRATEPRESCALER_4
 SUBGHZ.IPParameters=BaudratePrescaler
-USART1.FIFOMode=FIFOMODE_ENABLE
-USART1.IPParameters=VirtualMode-Asynchronous,FIFOMode
-USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART2.BaudRate=57600
-USART2.IPParameters=VirtualMode-IrDA,BaudRate,Prescaler,PowerMode
-USART2.PowerMode=IRDA_POWERMODE_NORMAL
-USART2.Prescaler=1
-USART2.VirtualMode-IrDA=VM_IRDA
+USART1.BaudRate=57600
+USART1.IPParameters=VirtualMode-IrDA,BaudRate,Prescaler
+USART1.Prescaler=1
+USART1.VirtualMode-IrDA=VM_IRDA
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_ADC_TempSens_Input.Mode=IN-TempSens
 VP_ADC_TempSens_Input.Signal=ADC_TempSens_Input
 VP_ADC_Vref_Input.Mode=IN-Vrefint
