--- a/Seeed-LoRa-E5.ioc
+++ b/Seeed-LoRa-E5.ioc
@@ -190,10 +190,10 @@ PB4.Locked=true
 PB4.PinState=GPIO_PIN_RESET
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PB5.GPIO_Label=LED2
+PB5.GPIO_Label=IRDA_SD
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Locked=true
-PB5.PinState=GPIO_PIN_RESET
+PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Speed,GPIO_Label
 PB6.GPIO_Label=USARTx_TX
@@ -228,7 +228,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32WLE5JCIx
 ProjectManager.FirmwarePackage=STM32Cube FW_WL V1.2.0
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
@@ -245,7 +245,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_IRDA_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-true-HAL-true,4-MX_RTC_Init-RTC-true-HAL-true,5-MX_ADC_Init-ADC-true-HAL-true,6-MX_USART1_IRDA_Init-USART1-true-HAL-true,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_LoRaWAN_Init-LORAWAN-true-HAL-false,9-MX_USART2_UART_Init-USART2-true-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
